# emesa-digital

./: .gitattributes  .gitignore  README.md  docker-compose.yml  start.bat  start.sh
backend/: .env  Dockerfile  init_db.sql  pyproject.toml  setup.sh
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_client.py  0003_remove_client_billing_contact_name.py  0004_remove_client_primary_contact_email.py  0005_delete_client.py
backend/backend/: settings.py  urls.py
backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/orders/management/commands/: fix_part_ids.py
backend/orders/migrations/: 0001_initial.py  0002_alter_order_options_machine_capabilities_and_more.py  0003_order_target_price.py  0004_ordermessage.py  0005_order_agreed_price_order_payment_confirmed_and_more.py  0006_order_d2_draft_design_order_part_id_and_more.py  0007_rename_max_capacity_machine_bed_length_and_more.py  0008_machine_photo.py  0009_remove_machine_photo.py  0010_machine_photo.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts.timestamp-1752523284984-fe8aefa80c937.mjs
frontend/src/: index.css
frontend/src/components/: AdminDashboard.tsx  AdminSupplierManagement.tsx  AuthenticationModal.tsx  ComponentRequirementsForm.tsx  DashboardStats.tsx  MachineForm.tsx  Navbar.tsx  OrderChatModal.tsx  OrderHistory.temp.tsx  OrderHistory.tsx  OrderList.tsx  OrderMachineAssignment.tsx  OrderManagement.tsx  PaymentForm.tsx  (+2 more)
(+6 files in other folders)
